# liwaza-govdata

./: .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  BENCHMARK.md  README.md  TEST_PLAN.md  docker-compose.yml  vercel.json
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/models/: schemas.py
apps/backend/app/services/: chat.py  datafair.py  nlp.py  tools.py
apps/backend/tests/: test_chat_router.py
apps/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/: ResultsView.tsx  ToolTimeline.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/styles/: app.css
docs/: AI_STRATEGY.md  CLEAN_CODE_REVIEW.md
